Fix css on small screens

--- a/guide/static/guide/css/main.css
+++ b/guide/static/guide/css/main.css
@@ -95,10 +95,6 @@ float: left !important;
 }
 
 
-.navbar-nav.navbar-right:last-child {
-margin-right: -15px !important;
-}
-
 .navbar-right {
 float: right!important;
 }
